# method-co-evolution

./: .gitignore  LICENSE  README.md  pyproject.toml  replication-package.md
co-evolution/: README.md  pyproject.toml
co-evolution/src/ptc/: change_count_boxplot.py  change_count_cdf.py  constants.py  experiment_util.py  generate_change_count.py  generate_fan_in_count.py  generate_fan_out_count.py  generator_run.ipynb  link_strategy.py  method_history_oracle.py  migrate_integer_csv_columns.py  oracle_formatter.py  plot_util.py  test_method_oracle.py
co-evolution/src/ptc/drac/: main.py
co-evolution/tests/: __init__.py  test_artifact_revision_cdf.py  test_copy_experiment_artifacts.py  test_drac_sbatch.py  test_expand_t2p_candidates.py  test_experiment_util.py  test_filter_m2m_candidate_ground_truth.py  test_filter_t2p_candidate_ground_truth.py  test_filter_t2p_candidates.py  test_generate_m2m_tech.py  test_generate_revision_mwu.py  test_generate_t2p_link.py  test_generate_t2p_mwu.py  test_generate_t2p_tech.py  test_ground_truth_sample.py  test_history_viewer.py  test_history_viewer_cli.py  test_llm_main.py  test_llm_persistence.py  test_llm_prompting.py  test_llm_runner.py  test_method_call_statistics.py  test_method_history_runtime_boxplot.py  test_method_history_runtime_table.py  test_migrate_integer_csv_columns.py  test_revision_mwu_plot.py  test_sample_t2p_revision.py  test_t2p_correlation_cdf.py  test_t2p_link_evaluation.py  test_t2p_link_metric_table.py  test_t2p_revision_delta_plot.py  test_t2p_test_smell.py  test_t2p_test_smell_plots.py  test_t2plinker_ground_truth_statistics_table.py  test_testlinker.py
config/: logback.xml  (+2 more)
method-history-collector/: README.md  pyproject.toml
method-history-collector/src/mhc/: artifact_update.py  artifacts.py  call_graph.py  callgraph.py  class_scanner.py  command_util.py  complexity_analyzer.py  config.py  constant.py  data_processing.ipynb  git_repository.py  main.py  method_history_collector.py  method_history_jar_runner.py  method_scanner.py  playground.py  repair_duplicate_history_archives.py  test_main.py  test_method_history.py  test_smell.py  util.py  zip.py
method-history-collector/tests/: test_artifact_update.py  test_artifacts.py  test_call_graph.py  test_callgraph.py  test_class_scanner.py  test_cli_args.py  test_experiment_paths.py  test_git.py  test_index_output.py  test_main.py  test_method_code.py  test_method_history.py  test_method_scanner.py  test_repository_dataset.py  test_test_smell.py  test_util.py
(+389 files in other folders)
