[project]
name = "co-evolution"
version = "0.1.0"
description = "Production and Test Method Co-Evolution"
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "numpy",
    "GitPython",
    "javalang",
    "matplotlib",
    "scipy",
    "levenshtein",
    "scikit-learn",
    "pytctracer",
    "cliffs-delta"
]

[project.optional-dependencies]
llm = [
    "torch",
    "transformers",
    "accelerate",
    "openai",
]

[project.scripts]
ptc-llm = "ptc.llm.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
