[project]
name = "method-history-collector"
version = "0.1.0"
description = "Collects method change history from repositories"
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "numpy",
    "GitPython",
    "jpype1",
    "javalang",
    "python-dotenv",
    "PyGithub",
    "requests"
]

[project.scripts]
mhc = "mhc.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
